# sparktutor

./: .gitignore  README.md  pyproject.toml
sparktutor-vscode/: .vscodeignore  esbuild.js  package-lock.json  package-vsix.sh  package.json  tsconfig.json
sparktutor-vscode/media/: lesson.css  lesson.js
sparktutor-vscode/src/: bridge.ts  commands.ts  courseTree.ts  diagnostics.ts  extension.ts  lessonPanel.ts  outputChannel.ts  statusBar.ts  types.ts  workspaceManager.ts
src/sparktutor/: __init__.py  __main__.py  cli.py
src/sparktutor/app/: main_app.py
src/sparktutor/app/css/: sparktutor.tcss
src/sparktutor/app/screens/: home_screen.py  lesson_screen.py
src/sparktutor/app/widgets/: code_editor.py  feedback_overlay.py  lesson_controls_pane.py  lesson_pane.py  output_pane.py
src/sparktutor/config/: settings.py
src/sparktutor/courses/: registry.py
src/sparktutor/courses/spark_declarative_pipelines/: course.yaml
src/sparktutor/courses/spark_declarative_pipelines/lessons/01_spark_session/: lesson.yaml
src/sparktutor/courses/spark_declarative_pipelines/lessons/02_functions_and_transforms/: lesson.yaml
src/sparktutor/engine/: adaptive.py  evaluator.py  executor.py  feedback.py  lesson_loader.py  lesson_runner.py  normalizer.py  scaffolding.py  spark_knowledge.py
src/sparktutor/server/: __init__.py  __main__.py  handler.py  protocol.py
src/sparktutor/state/: progress.py
tests/: conftest.py  test_evaluator.py  test_executor.py  test_lesson_loader.py  test_scaffolding.py  test_server_handler.py  test_server_protocol.py
(+16 files in other folders)
