[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparktutor"
version = "0.1.0"
description = "Interactive Spark 4.1 learning environment with Claude-powered tutoring"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
tui = [
    "textual>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sparktutor = "sparktutor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sparktutor"]
